[gd_scene load_steps=2 format=3]

[ext_resource type="Script" path="res://tests/interaction_only/TestInteractionOnlyRunner.gd" id="1_0"]

[node name="root" type="Node"]

[node name="TestRunner" type="Node" parent="."]
script = ExtResource("1_0")

[node name="InteractionTestOverlay" type="CanvasLayer" parent="."]

[node name="TestLogPanel" type="MarginContainer" parent="InteractionTestOverlay"]
layout_mode = 3
anchors_preset = 6
anchor_right = 0.0
anchor_bottom = 1.0
offset_left = 10.0
offset_top = 70.0
offset_right = 430.0
offset_bottom = -50.0

[node name="TestLogList" type="ItemList" parent="InteractionTestOverlay/TestLogPanel"]
layout_mode = 1
size_flags_vertical = 3
select_mode = 0
fixed_column_width = 0
theme_override_font_sizes/font_size = 15
theme_override_colors/bg_color = Color(0.05, 0.05, 0.1, 0.95)
theme_override_constants/border_width_all = 2
theme_override_colors/border_color = Color(0.2, 0.5, 0.9, 1.0)
